@@ -206,6 +206,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added possibility to only redefine partially certifiedSignatures on a MeetingGroup, this way we may still use for example
   signature 1 from the MeetingConfig and only redefine signature 2 on the MeetingGroup
 - When creating an item from a template, if the first edition is cancelled, it is deleted
+- When removing a MeetingConfig, make sure every created groups (meetingmanagers, powerobservers, ...) are removed as well
 
 3.3 (2015-02-27)
 ----------------
